# Homework

./: .gitignore  .gitmodules  Combined_HW_1.cpp  README.md
HW_1/: Problem_1.cpp  Problem_2.cpp  Problem_3.cpp  Problem_4.cpp  Problem_5.cpp  Problem_6.cpp  Problem_7.cpp  Problem_8.cpp  README.md
HW_2/: .gitignore  CMakeLists.txt  CMakeLists_2.txt  HW 2 Q5 and Q6.txt  README.md  README.txt  build.sh  main.cpp  main_hw2.cpp  results.txt
HW_2/Include/: AERP_424_HW_2_Q4_Data.csv  question1.h  question123.h
HW_2/results/: results.txt
HW_2/src/: Q5.md  Q6.md  Question_5.txt  Question_6.txt  main.cpp  main_1-3.cpp  main_4.cpp  question1.cpp  question123.cpp  question_2.cpp
Other/Participation Week 6/: Week 06 Participation Data.xlsx  output_dt_0.012500.csv  output_dt_0.1.csv  output_dt_0.200000.csv
Other/Participation Week 9/: main_deque.cpp  main_variadics.cpp
Participation Week 6/: 0.0125_Data.csv  0.025_Data.csv  0.1_Data.csv  0.2_Data.csv  Data.csv  Dowdell_Week_06_Participation.cpp  output_dt_0.025000.csv  output_dt_0.1.xlsx  output_dt_0.100000.csv
